# ChompingGlassSolver

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  README.md  WRITEUP.md  chomping_glass_policy.json  play_game.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/solver-core/: Cargo.toml
crates/solver-core/src/: lib.rs
