[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.0"
solana-sdk = "2.0"
solana-transaction-status = "2.0"
solana-system-interface = "2.0"
solver-core = { path = "../solver-core" }
openssl = { version = "0.10", features = ["vendored"] }
